# Odyssey

./: .gitignore  CMakeLists.txt  CppExplorer.pro  Readme.md  deploy_linux.sh  license_header.txt
linux/: install.sh  odyssey.desktop  uds-explorer.desktop  uninstall.sh
share/: cpp-explorer.desktop
src/: CMakeLists.txt  actions.cpp  actions.cxx  actions.hh  actions.hpp  addressbar_buttons.cpp  addressbar_buttons.cxx  addressbar_buttons.hh  addressbar_buttons.hpp  addressbar_text.cpp  addressbar_text.cxx  addressbar_text.hh  addressbar_text.hpp  browserwidget.cpp  browserwidget.cxx  browserwidget.hh  browserwidget.hpp  clipboard.hh  clipboard.hpp  endtoolbar.cpp  endtoolbar.cxx  endtoolbar.hh  endtoolbar.hpp  icons.qrc  main.cpp  main.cxx  navbar.cpp  navbar.cxx  navbar.hh  navbar.hpp  searchbar.cpp  searchbar.hpp  sidebar.cpp  sidebar.cxx  sidebar.hh  sidebar.hpp  src.pro  tabwidget.cpp  tabwidget.cxx  tabwidget.hh  (+13 more)
src/dialogs/: appchooserdialog.cpp  appchooserdialog.cxx  appchooserdialog.hh  appchooserdialog.hpp  helpdialog.cpp  helpdialog.cxx  helpdialog.hh  helpdialog.hpp  helpdialog.ui  keyboardshortcutsdialog.cpp  keyboardshortcutsdialog.cxx  keyboardshortcutsdialog.hh  keyboardshortcutsdialog.hpp  keyboardshortcutsdialog.ui
src/menu/: background_contextmenu.cpp  background_contextmenu.cxx  background_contextmenu.hh  background_contextmenu.hpp  file_contextmenu.cpp  file_contextmenu.cxx  file_contextmenu.hh  file_contextmenu.hpp  folder_contextmenu.cpp  folder_contextmenu.cxx  folder_contextmenu.hh  (+5 more)
terminal/: CMakeLists.txt  config.h  x.c
(+14 files in other folders)
